2005-07-02 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/expect.pkg: Added --with-tclinclude to configure
	  line.
	* profiles/lfs-6.1/findutils.pkg: Upgraded to findutils 4.2.23.
	* profiles/lfs-6.1/flex.pkg: Upraded to latest flex patch.
	* profiles/lfs-6.1/grep.pkg: Removed --with-included-regex from stage1
	  build.
	* profiles/lfs-6.1/gzip.pkg: Added compress symlink to gzip.
	* profiles/lfs-6.1/mktemp.pkg: Upgraded to latest mktemp patch.
	* profiles/lfs-6.1/shadow.pkg: Upgraded to shadow 4.0.9, removed
	  lastlog patch.

2005-07-01 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/filesystem.c: Added.

2005-06-30 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/libc.c, reroot/libreroot/libc.h: dlsymed more persona
	  functions.
	* reroot/libreroot/persona.c: Added more persona functions.

2005-06-29 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/libreroot.c, reroot/libreroot/libreroot.h: Renamed to
	  libc.*.
	* reroot/libreroot/libc.c, reroot/libreroot/libc.h: Added.
	* reroot/libreroot/reroot.h: Removed inclusion of libreroot.h.
	* reroot/libreroot/open.c, reroot/libreroot/persona.c: Changed
	  references to reroot.h to libc.h.

	* reroot/libreroot/memory.c (reroot_stack_string): Minor optimization.

2005-06-27 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/reroot.c: Flagged constructor & destructor for gcc.
	* reroot/libreroot/reroot.h: Removed declarations of constructor &
	  destructor.
	* reroot/libreroot/persona.c: Flagged constructor for gcc.
	* reroot/libreroot/persona.h: Removed.
	* reroot/libreroot/libreroot.c: Removed calls to other initializers.

	* reroot/libreroot/memory.c (reroot_stack_string): Used mempcpy instead
	  of strcat (should be faster).

2005-06-22 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/memory.c: Used memcpy instead of strcpy.
	* reroot/libreroot/reroot.c: Used memcpy & mempcpy instead of strcat &
	  strcpy.
